set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SCENE_EDITOR_HEADERS SceneEditor.hpp) 
set(SCENE_EDITOR_SOURCES SceneEditor.cpp)

set(INCLUDE_DIRECTORIES ../)

add_library(EditorPluginScene MODULE ${SCENE_EDITOR_HEADERS} ${SCENE_EDITOR_SOURCES})

if (MSVC)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
endif()

set_target_properties(EditorPluginScene PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

target_include_directories(EditorPluginScene PUBLIC ${MONO_PATH}/include/mono-2.0 /usr/include/mono-2.0 ${ASSIMP_INCLUDE_DIR} ${RAPIDJSON_PATH} ${DEPS_DIR} ${RAPIDJSON_INCLUDE_DIRS} ${BULLET_INCLUDE_DIR} ${INCLUDE_DIRECTORIES})