set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(ENGINE_CORE_HEADERS Core/Engine.hpp Core/GameObject.hpp Core/LoadingScreen.hpp Core/iniHandler.hpp Core/Input.hpp Core/InputInterface.hpp Core/Space.hpp Core/Utilities.hpp Core/Scene.hpp)
source_group("Core\\Header Files" FILES ${ENGINE_CORE_HEADERS})
set(ENGINE_RENDERPATHS_HEADERS Renderpaths/RenderPath.hpp  Renderpaths/RenderPathDeferred.hpp Renderpaths/RenderPathForward.hpp)
source_group("Render Paths\\Header Files" FILES ${ENGINE_RENDERPATHS_HEADERS})
set(ENGINE_SYSTEMS_HEADERS Systems/RenderStaticMeshSystem.hpp Systems/ControllerSystem.hpp Systems/TransformSystem.hpp Systems/AudioSystem.hpp Systems/BaseSystem.hpp Systems/CameraSystem.hpp Systems/PhysicsSystem.hpp Systems/CubemapSystem.hpp Systems/GameplaySystem.hpp Systems/GeometryStaticSystem.hpp Systems/GeometrySkeletalSystem.hpp Systems/GeometryTerrainSystem.hpp Systems/GeometrySystem.hpp Systems/LightSystem.hpp)
source_group("Systems\\Header Files" FILES ${ENGINE_SYSTEMS_HEADERS})
set(ENGINE_ASSET_MANAGERS_HEADERS AssetManagers/AssetReferences.hpp AssetManagers/AudioManager.hpp AssetManagers/GraphicsPipelineManager.hpp AssetManagers/MaterialManager.hpp AssetManagers/ModelManager.hpp AssetManagers/TextureManager.hpp)
source_group("Asset Managers\\Header Files" FILES ${ENGINE_ASSET_MANAGERS_HEADERS})
set(ENGINE_POST_HEADERS PostProcess/BasePost.hpp PostProcess/PostProcessAutoExposure.hpp PostProcess/PostProcessSSR.hpp PostProcess/PostPipeline.hpp PostProcess/ColorGradingPost.hpp PostProcess/PostProcessIBL.hpp PostProcess/PostProcessSSAO.hpp PostProcess/PostProcessSSAOBlur.hpp PostProcess/PostProcessTonemap.hpp)
source_group("Post Processing\\Header Files" FILES ${ENGINE_POST_HEADERS})
set(ENGINE_OTHER_HEADERS Utilities/SettingsFile.hpp ../FormatCommon/Bounding.hpp ../FormatCommon/StaticModel.hpp Utilities/Logger.hpp Utilities/DLLHandler.hpp Utilities/DLLGraphics.hpp Utilities/DLLAudio.hpp)
source_group("Other\\Header Files" FILES ${ENGINE_OTHER_HEADERS})
set(ENGINE_HEADERS ${ENGINE_OTHER_HEADERS} ${ENGINE_CORE_HEADERS} ${ENGINE_ASSET_MANAGERS_HEADERS} ${ENGINE_RENDERPATHS_HEADERS} ${ENGINE_SYSTEMS_HEADERS} ${ENGINE_POST_HEADERS})

set(ENGINE_CORE_SOURCES Core/Main.cpp Core/GameObject.cpp Core/Engine.cpp Core/LoadingScreen.cpp Core/iniHandler.cpp Core/Input.cpp Core/Space.cpp Core/Utilities.cpp Core/Scene.cpp)
source_group("Core\\Source Files" FILES ${ENGINE_CORE_SOURCES})
set(ENGINE_RENDERPATHS_SOURCES Renderpaths/RenderPathDeferred.cpp Renderpaths/RenderPathForward.cpp)
source_group("Render Paths\\Source Files" FILES ${ENGINE_RENDERPATHS_SOURCES})
set(ENGINE_SYSTEMS_SOURCES Systems/RenderStaticMeshSystem.cpp Systems/ControllerSystem.cpp Systems/TransformSystem.cpp Systems/AudioSystem.cpp Systems/BaseSystem.cpp Systems/CameraSystem.cpp Systems/PhysicsSystem.cpp Systems/CubemapSystem.cpp Systems/GameplaySystem.cpp Systems/GeometryStaticSystem.cpp Systems/GeometrySkeletalSystem.cpp Systems/GeometryTerrainSystem.cpp Systems/GeometrySystem.cpp Systems/LightSystem.cpp)
source_group("Systems\\Source Files" FILES ${ENGINE_SYSTEMS_SOURCES})
set(ENGINE_ASSET_MANAGERS_SOURCES AssetManagers/AudioManager.cpp AssetManagers/GraphicsPipelineManager.cpp AssetManagers/MaterialManager.cpp AssetManagers/ModelManager.cpp AssetManagers/TextureManager.cpp)
source_group("Asset Managers\\Source Files" FILES ${ENGINE_ASSET_MANAGERS_SOURCES})
set(ENGINE_POST_SOURCES PostProcess/PostProcessAutoExposure.cpp PostProcess/PostProcessSSR.cpp PostProcess/PostPipeline.cpp PostProcess/ColorGradingPost.cpp PostProcess/PostProcessIBL.cpp PostProcess/PostProcessSSAO.cpp PostProcess/PostProcessSSAOBlur.cpp PostProcess/PostProcessTonemap.cpp)
source_group("Post Processing\\Source Files" FILES ${ENGINE_POST_SOURCES})
set(ENGINE_OTHER_SOURCES Utilities/SettingsFile.cpp ../FormatCommon/Bounding.cpp Utilities/Logger.cpp Utilities/DLLHandler.cpp Utilities/DLLGraphics.cpp Utilities/DLLAudio.cpp)
source_group("Other\\Source Files" FILES ${ENGINE_OTHER_SOURCES})
set(ENGINE_SOURCES ${ENGINE_OTHER_SOURCES} ${ENGINE_ASSET_MANAGERS_SOURCES} ${ENGINE_CORE_SOURCES} ${ENGINE_RENDERPATHS_SOURCES} ${ENGINE_SYSTEMS_SOURCES} ${ENGINE_POST_SOURCES}) 

set(INCLUDE_DIRECTORIES ../GraphicsCommon ../AudioCommon)

add_executable(Grindstone ${ENGINE_SOURCES} ${ENGINE_HEADERS})

target_compile_definitions(Grindstone PRIVATE _CRT_SECURE_NO_WARNINGS)

if (MSVC)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
endif()

set_target_properties(Grindstone PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

if (WIN32)
    #target_link_libraries(Grindstone optimized ${bullet_LIB_REL})
	target_link_libraries(Grindstone ${bullet_LIB_DEB})
else ()
    find_package (Threads)
    target_link_libraries(Grindstone ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS} BulletDynamics BulletCollision LinearMath)
endif()

target_include_directories(Grindstone PUBLIC ${DEPS_DIR} ${RAPIDJSON_INCLUDE_DIRS} ${BULLET_INCLUDE_DIR} ${INCLUDE_DIRECTORIES})